--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-            <img src="./assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo"/>
+            <a href="./index.html"><img src="./assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
             <h1 class="topHl">Estudio Matheu</h1>
             <p class="topHl">Servicios jurídicos e inmobiliarios</p>
 
@@ -72,7 +72,7 @@
 
     </main>
     
-    <footer>
+    <footer class="footer">
         <section class="footerSep">
         <article class="footer__section">
         <h2>Secciones</h2>
