--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-        <img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo"/>
+        <a href="../index.html"><img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
         <h1 class="topH2">Alquiler de propiedades</h1>
         <nav>
              <a href="../pages/busqueda-de-propiedades.html" class="lkV2">Volver</a>
-    </nav>
-    <h2 class="spaceTop">Solicitá mas informacion por <a href="../pages/contacto.html">whatsapp</a></h2>
+        </nav>
+        <h2 class="spaceTop">Solicitá mas informacion por <a href="../pages/contacto.html">whatsapp</a></h2>
     </header>
 
     <main>
