--- a/pages/busqueda-de-propiedades.html
+++ b/pages/busqueda-de-propiedades.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logoBp"/>
+        <a href="../index.html"><img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
         <h1 class="topH2">Busqueda de propiedades</h1>
         <nav class="linkBp">
             <ul class="linkAc" ">
