--- a/pages/asesoramiento-juridico.html
+++ b/pages/asesoramiento-juridico.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header>
-        <img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logoAj"/>
-        <h1 class="topH2">Asesoramiento jurídico</h1>
+        <a href="../index.html"><img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
+            <h1 class="topH2">Asesoramiento jurídico</h1>
         <nav>
-            <a href="../index.html" class="linkAc ">Pagina principal</a>
+            <a href="../index.html" class="linkAc">Pagina principal</a>
         </nav>
 
     </header>
