--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo"/>
+        <a href="../index.html"><img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
         <h1 class="topH2">Contacto</h1>
         <nav>
             <a href="../index.html" class="linkAc ">Pagina principal</a>
@@ -18,45 +18,44 @@
 
     </header>
 
-    <main>
-        <section>
-            <h2 class="titleP">Contactanos</h2>
-            <form action="send" class="form">
-                <label for="mail">Ingrese su mail:</label>
-                <input type="email" id="mail" placeholder="Mail..." name="mail" />
-                <br />
-                <label for="consulta">Ingrese su consulta o envie un mensaje:</label>
-                <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Consulta..."></textarea>
-                <button type="submit">Enviar</button>
-                <button type="reset">Limpiar</button>
-            </form>
+    <main>     
+        <section class="hero">
+            <div class="hero__grid container">
+              <div class="hero__grid-content">
+                <h1>Direccion:Matheu 1234</h1>
+                <p>Contactanos a nuestro gmail,redes o escribinos a nuestro whatsapp:</p>
+                <img class="hero__grid-img" src="../assets/img/local.png" alt="local" width="400" height="285" />
+              </div>
+            </div>
         </section>
 
-        <section class="local">
-            <img src="../assets/img/local.png" alt="local" width="400" height="285" />
-            <h2>Direccion:Matheu 1234</h2>
-            <h2>Contactanos a nuestro gmail,redes o escribinos a nuestro whatsapp:</h2>
+        <section class="form">
+            <h2 class="form__title">Contactanos</h2>
+            <form class="form__content" action="send">
+                <label for="mail">Ingrese su mail:</label>
+                    <input type="email" id="mail" placeholder="Mail..." name="mail" />
+                    <label for="consulta">Ingrese su consulta o envie un mensaje:</label>
+                <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="Consulta..."></textarea>
+                    <button type="reset">Limpiar</button>
+                    <button type="submit">Enviar</button>
+            </form>
         </section>
 
         <article class="conRedes container">
             <section>
-                <img src="../assets/img/gmail.png" alt="gmailpic" width="50" height="50" />
-                <h3>contactoematheu@gmail.com</h3>
+                <h3><img src="../assets/img/gmail.png" alt="gmailpic" width="50" height="50" />contactoematheu@gmail.com</h3>
             </section>
 
             <section>
-                <img src="../assets/img/instagram.png" alt="igpic" width="50" height="50" />
-                <h3>@Estudio_Matheu</h3>
+                <h3><img src="../assets/img/instagram.png" alt="igpic" width="50" height="50" />@Estudio_Matheu</h3>
+            </section>
+
+            <section class="conRedes__fb">
+                <h3><img src="../assets/img/facebook.png" alt="facepic" width="50" height="50" />@Estudiomatheu</h3>
             </section>
 
             <section>
-                <img src="../assets/img/facebook.png" alt="facepic" width="50" height="50" />
-                <h3>@Estudiomatheu</h3>
-            </section>
-
-            <section>
-                <img src="../assets/img/wpp.png" alt="wppic" width="50" height="50" />
-                <h3>+54 1234 5678</h3>
+                <h3><img src="../assets/img/wpp.png" alt="wppic" width="50" height="50" />+54 1234 5678</h3>
             </section>
         </article>
     </main>
