--- a/pages/venta.html
+++ b/pages/venta.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo"/>
+        <a href="../index.html"><img src="../assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
         <h1 class="topH2">Venta de propiedades</h1>
         <nav>
              <a href="../pages/busqueda-de-propiedades.html" class="lkV2">Volver</a>
