--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Estudio Matheu</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet" />  
@@ -15,11 +15,11 @@
 <body>
     <header>
             <a href="./index.html"><img src="./assets/img/iconoprincipal.png" alt="icono principal" width="50" height="50" class="logo" /></a>
-            <h1 class="topHl">Estudio Matheu</h1>
+            <h1 class="topHl">Estudio Matheu | Página principal</h1>
             <p class="topHl">Servicios jurídicos e inmobiliarios</p>
 
         <nav class="link">
-            <ul class="linkAc" ">
+            <ul class="linkAc">
                 <li><a href="./index.html" class="lkSon">Pagina principal</a></li>
 
                 <li><a href="./pages/contacto.html" class="lkSon">Contacto</a></li>
@@ -35,37 +35,40 @@
         <h2 class="titleP">Propiedades</h2>
         <section class="prop container">
             <div class="prop__grid">
-                <article class="card">
-                    <div class="card__header">
-                        <small class="card__header--strong">$40000</small>
+                <article class="card-1">
+                    <div class="card-1__header">
+                        <small class="card-1__header--strong">$40000</small>
                         <img src="./assets/img/alq2.png" alt="prop1" width="420" height="300" />
                     </div>
 
                     <p class="card__description">
-                    Parque patricios, 2 ambientes balcon subte linea H
+                    Parque patricios, con 2 ambientes balcon, subte linea H
                     </p>
+                    <a class="btn-ver" href="">Ver</a>
                 </article>
 
-                <article class="card">
-                    <div class="card__header">
-                        <small class="card__header--strong">usd85000</small>
+                <article class="card-1">
+                    <div class="card-1__header">
+                        <small class="card-1__header--strong">usd85000</small>
                         <img src="./assets/img/vent1.png" alt="prop1" width="420" height="300" />
                     </div>
 
-                    <p class="card__description">
+                    <p class="card-1__description">
                         Parque patricios, 4 ambientes balcon excelente vista, subte linea H
                     </p>
+                    <a class="btn-ver" href="">Ver</a>
                 </article>
 
-                <article class="card">
-                    <div class="card__header">
-                        <small class="card__header--strong">usd79000</small>
+                <article class="card-1">
+                    <div class="card-1__header">
+                        <small class="card-1__header--strong">usd79000</small>
                         <img src="./assets/img/vent2.png" alt="prop1" width="420" height="300" />
                     </div>
 
-                    <p class="card__description">
+                    <p class="card-1__description">
                         Parque patricios, depto 3 ambientes 60m2 subte linea H
                     </p>
+                    <a class="btn-ver" href="">Ver</a>
                 </article>
             </div>
         </section>
@@ -89,10 +92,12 @@
 
             <article class="footer__redes">
             <h2>Redes</h2>
-                <img src="./assets/img/facebook.png" alt="facepic" width="50" height="50" />
-                <h2 class="redes">Estudiomatheu</h2>
-                <img src="./assets/img/instagram.png" alt="igpic" width="50" height="50" />
-                <h2>Estudio_Matheu</h2>
+                <!-- <img src="./assets/img/facebook.png" alt="facepic" width="50" height="50" /> -->
+                <!-- <h2 class="link-facebook">Estudiomatheu_12</a> -->
+                    <h2 class="link-facebook">facebook</a>
+                <!-- <img src="./assets/img/instagram.png" alt="igpic" width="50" height="50" /> -->
+                <!-- <h2 class="link-instagram">Estudio_Matheu</a> -->
+                    <h2 class="link-instagram">instagram</a>
             </article>
         </section>
     </footer>
