--- a/pages/busqueda-de-propiedades.html
+++ b/pages/busqueda-de-propiedades.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudio Matheu</title>
+    <title>Estudio Matheu | Busqueda de propiedades</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +31,6 @@
         <section class="prop container">
             <div class="prop__grid">
                 <article class="card">
-
                     <div class="card__header">
                         <small class="card__header--strong">usd85000</small>
                         <img src="../assets/img/prop1.png" alt="prop1" width="420" height="300" />
